--- a/home.html
+++ b/home.html
@@ -1560,7 +1560,7 @@
           <p class="footer-bottom-tagline">Assita a hora que quiser!</p>
         </div>
         <div class="footer-middle">
-          <h2 class="footer-heading">Siga-nos</h2>
+          <h2 style="color:white" class="footer-heading">Siga-nos</h2>
           <ul class="footer-middle-list icons">
             <a class="footer-links" href="https://www.facebook.com/" target="_blank"><i
                 class="fab fa-facebook-f facebook" style="color:red"></i></a>
@@ -1575,7 +1575,7 @@
           </ul>
         </div>
         <div class="footer-middle">
-          <h2 class="footer-heading">Serviços</h2>
+          <h2 style="color:white" class="footer-heading">Serviços</h2>
           <ul class="footer-middle-list">
             <li class="footer-middle-list-item"><a href="home.html">Explore os ultimos lançamentos</a> </li>
             <li class="footer-middle-list-item"><a href="web-series.html">Assista Series</a> </li>
@@ -1584,7 +1584,7 @@
           </ul>
         </div>
        <div class="footer-middle">
-                <h2 class="footer-heading">Teste nosso app</h2>
+                <h2 style="color:white" class="footer-heading">Teste nosso app</h2>
                 <ul class="footer-middle-list icons">
                     <a class="footer-links" href="#"><i class="fab fa-google-play" style="color:red"></i></a>
                     <a class="footer-links" href="#"><i class="fab fa-app-store-ios" style="color:red"></i></a>
@@ -1592,7 +1592,7 @@
             </div>
         <div class="footer-right">
           <p class="footer-links">
-          <h2 class="footer-heading">Entre em contato</h2>
+          <h2 style="color:white" class="footer-heading">Entre em contato</h2>
           <p class="footer-bottom-tagline">Sinta-se livre para nos contatar</p>
           <a class="footer-contact-button" href="contactus.html">Contato</a>
           </p>
